helm/oe-k8s/prometheus-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.thanshi.life
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
